# endnote_quick_add

./: .gitignore  DOCS.md  README.md  pyproject.toml
src/endnote_quick_add/: cli.py  config.py  endnote.py  pdf_fetcher.py  resolver.py  ris_writer.py
tests/: conftest.py  test_pdf_fetcher.py  test_resolver.py  test_ris_writer.py
