[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endnote-quick-add"
version = "0.1.0"
description = "Fast CLI to add a paper (citation + PDF) to EndNote on Mac."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Changhao Li" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Adds browser-TLS-impersonating HTTP transport so publishers behind
# Cloudflare's TLS-fingerprint check stop returning 403/503 challenges.
# Install with: pip install endnote-quick-add[cloudflare]
cloudflare = [
    "curl_cffi>=0.7",
    "browser_cookie3>=0.19",
]
dev = [
    "pytest>=8",
    "requests-mock>=1.11",
]

[project.scripts]
eqa = "endnote_quick_add.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
